--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,15 @@ bin/Data/Hotkeys.ini
 bin/Data/Nemp.ini
 bin/Data/Nemp_EQ.ini
 bin/Data/NempWebServer.ini
+bin/Images/[Originaldateien]/CDs.jpg
+bin/__nemp.exe
+bin/bugreport.txt
+bin/Data/000-Playlist.m3u
+bin/Data/Nemp-PlayerLog.log
+bin/Data/RandomPlaylist.ini
+*.~1~
+*.~2~
+*.~3~
+*.~4~
+*.~5~
+bin/Languages/de/LC_MESSAGES/__default - Kopie.mo
