removed some unused files

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ bin/Data/RandomPlaylist.ini
 bin/Languages/de/LC_MESSAGES/__default - Kopie.mo
 bin/Skins/CatWoman/
 bin/Skins/Earth At Night/
+/help/nemp-help-de.synctex.gz
+/help/nemp-help-en.synctex.gz
