renamed help direcory

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,13 @@ bin/Skins/Earth At Night/
 /bin/Languages/de/LC_MESSAGES/default.po
 /bin/Languages/de/LC_MESSAGES/howto upgrade.txt
 /src/*.stat
+/src-help/nemp-help-de.out
+/src-help/nemp-help-de.synctex.gz
+/src-help/nemp-help-de.toc
+/src-help/nemp-help-en.aux
+/src-help/nemp-help-en.log
+/src-help/nemp-help-en.out
+/src-help/nemp-help-en.synctex.gz
+/src-help/nemp-help-en.toc
+/src-help/nemp-help-de.aux
+/src-help/nemp-help-de.log
