Icon for G15App

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ bin/Skins/Earth At Night/
 /src-help/nemp-help-en.toc
 /src-help/nemp-help-de.aux
 /src-help/nemp-help-de.log
+/src/common/__history
